--- a/janus-plugin-integration-test/pom.xml
+++ b/janus-plugin-integration-test/pom.xml
@@ -19,6 +19,18 @@
 
     <dependencies>
         <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.1.3</version>
+        </dependency>
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
@@ -105,6 +117,7 @@
             <id>local</id>
             <properties>
                 <JENKINS_BASE>http://localhost:8080/</JENKINS_BASE>
+                <TIMEOUT>10</TIMEOUT>
             </properties>
         </profile>
     </profiles>
