Finished the first scenario. Added a workaround for configuration reloads. Since a Jenkins bug affects system configuration reloads, the default reloading strategy is now set to restart.

--- a/janus-plugin-integration-test/pom.xml
+++ b/janus-plugin-integration-test/pom.xml
@@ -15,6 +15,7 @@
     <properties>
         <SELENIUM_SERVER_HOST>localhost</SELENIUM_SERVER_HOST>
         <SELENIUM_PORT>4455</SELENIUM_PORT>
+        <RELOAD_STRATEGY>RESTART</RELOAD_STRATEGY>
     </properties>
 
     <dependencies>
