--- a/janus-plugin-integration-test/src/test/resources/de/codecentric/janus/plugin/config.properties
+++ b/janus-plugin-integration-test/src/test/resources/de/codecentric/janus/plugin/config.properties
@@ -2,3 +2,4 @@ selenium.server=${SELENIUM_SERVER_HOST}
 selenium.port=${SELENIUM_PORT}
 timeout=${TIMEOUT}
 jenkins.base=${JENKINS_BASE}
+reload.strategy=${RELOAD_STRATEGY}
