Added a new integration test case which covers the whole repository creation.

--- a/janus-plugin-integration-test/pom.xml
+++ b/janus-plugin-integration-test/pom.xml
@@ -16,6 +16,7 @@
         <SELENIUM_SERVER_HOST>localhost</SELENIUM_SERVER_HOST>
         <SELENIUM_PORT>4455</SELENIUM_PORT>
         <RELOAD_STRATEGY>RESTART</RELOAD_STRATEGY>
+        <EXECUTE_SINGLE></EXECUTE_SINGLE>
     </properties>
 
     <dependencies>
