--- a/janus-plugin-integration-test/src/test/resources/de/codecentric/janus/plugin/config.properties
+++ b/janus-plugin-integration-test/src/test/resources/de/codecentric/janus/plugin/config.properties
@@ -3,3 +3,4 @@ selenium.port=${SELENIUM_PORT}
 timeout=${TIMEOUT}
 jenkins.base=${JENKINS_BASE}
 reload.strategy=${RELOAD_STRATEGY}
+execute.single=${EXECUTE_SINGLE}
