Added a new integration test which verifies the whole bootstrap process.

--- a/janus-plugin-integration-test/pom.xml
+++ b/janus-plugin-integration-test/pom.xml
@@ -38,6 +38,11 @@
         </dependency>
 
         <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.jbehave</groupId>
             <artifactId>jbehave-core</artifactId>
         </dependency>
