--- a/janus-plugin/pom.xml
+++ b/janus-plugin/pom.xml
@@ -44,6 +44,11 @@
             <version>${janus.base.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-validator</groupId>
+            <artifactId>commons-validator</artifactId>
+            <version>1.4.0</version>
+        </dependency>
     </dependencies>
 
 </project>
