--- a/janus-plugin/pom.xml
+++ b/janus-plugin/pom.xml
@@ -45,9 +45,16 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+            <groupId>de.codecentric.janus</groupId>
+            <artifactId>jenkins</artifactId>
+            <version>${janus.base.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>commons-validator</groupId>
             <artifactId>commons-validator</artifactId>
             <version>1.4.0</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
