--- a/janus-plugin/pom.xml
+++ b/janus-plugin/pom.xml
@@ -19,15 +19,15 @@
 
     <repositories>
         <repository>
-            <id>m.g.o-public</id>
-            <url>http://maven.glassfish.org/content/groups/public/</url>
+            <id>repo.jenkins-ci.org</id>
+            <url>http://repo.jenkins-ci.org/public/</url>
         </repository>
     </repositories>
 
     <pluginRepositories>
         <pluginRepository>
-            <id>m.g.o-public</id>
-            <url>http://maven.glassfish.org/content/groups/public/</url>
+            <id>repo.jenkins-ci.org</id>
+            <url>http://repo.jenkins-ci.org/public/</url>
         </pluginRepository>
     </pluginRepositories>
 
@@ -47,6 +47,12 @@
         <dependency>
             <groupId>de.codecentric.janus</groupId>
             <artifactId>jenkins</artifactId>
+            <version>${janus.base.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>de.codecentric.janus</groupId>
+            <artifactId>jira</artifactId>
             <version>${janus.base.version}</version>
             <scope>compile</scope>
         </dependency>
