--- a/janus-plugin/pom.xml
+++ b/janus-plugin/pom.xml
@@ -62,6 +62,12 @@
             <version>1.4.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.9.4</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
