The UI and the jenkins plugin now support the whole JIRA and Confluence configuration workflow.

--- a/janus-plugin/pom.xml
+++ b/janus-plugin/pom.xml
@@ -15,6 +15,7 @@
 
     <properties>
         <janus.base.version>0.4-SNAPSHOT</janus.base.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <repositories>
