Fixed some of the integration tests.

--- a/janus-plugin-integration-test/src/test/resources/de/codecentric/janus/plugin/config.properties
+++ b/janus-plugin-integration-test/src/test/resources/de/codecentric/janus/plugin/config.properties
@@ -7,3 +7,7 @@ execute.single=${EXECUTE_SINGLE}
 auth.username=janusit
 auth.password=12janus34
 auth.apiToken=3a7c71777abf4312df2c234d07d84e28
+jira.username=janustestadmin
+jira.password=janusRocks
+jira.url=http://127.0.0.1:47623
+confluence.url=http://127.0.0.1:47624
